--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,15 @@ button {
     font-size:13px;
     color:#E0E0E0;
     display:block;
-    margin:0;padding:0;
+    margin:0;
     padding:10px;
+    padding-bottom: 20px;
     text-decoration:none;
     border-bottom:1px solid rgba(0,0,0,0.25);
     text-align:left;
+    height: 60px;
     }
+    .menu-ui a p {display: inline-block; margin-bottom: 20px; margin-top: -10px;}
     .menu-ui a:first-child {
       border-radius:3px 3px 0 0;
       }
