multi-variable toggle + new icon style

--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,9 @@ button {
     margin: 5px 5px -10px 5px;
     font-size: 16px;
 }
-.clean1{color: #1F78B4}
-.clean2{color: #B2DF8A}
-.clean3{color: #CC542E}
+.clean1{color: #0D5372}
+.clean2{color: #94B257}
+.clean3{color: #EDDC88}
  
 .ui-select {
   background:#fff;
