--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,12 @@ html, body, #map {
   margin: 0;
 }
 table {
-    border: 2px solid black;
+    border: 0px solid black;
     border-collapse: collapse;
-    font-size: 11px;
+    font-size: 14px;
 }
 th, td {
-    border: 1px solid black;
+    border: 0px solid black;
     border-collapse: collapse;
     padding: 3px;
 }
@@ -18,6 +18,13 @@ button {
   border-radius: 4px;
   background-color: #fff;
 }
+
+button.secoalash {
+  padding: 10px;
+  margin-left: 30%;
+  font-size: 14px;
+}
+
 #resetBt {
     position: absolute;
     top: 10px;
