new close button on splash screen

--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,9 @@ button {
 
 button.secoalash {
   padding: 10px;
-  margin-left: 30%;
+  margin: 10px;
   font-size: 14px;
+  display: inline-block;
 }
 
 #resetBt {
